--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ https://www.tooplate.com/view/2115-marvel
                                 <span>2024</span>
                            </div>
                            <div class="timeline-info">
-                                <h3><span><a href="C:\Users\Chintan\Downloads\2115_marvel\post\project-1\index.html" class="black">Uber-eats orders frequesy area vise</a></span>
+                                <h3><span><a href="https://chintanrabadiya.github.io/Chintan_portfolio/post/project-1/index.html" class="black">Uber-eats orders frequesy area vise</a></span>
                                 <p>Uber-eats has data for every orders and if they know about how much order they get every hours on every zipcode, it become easy for them to give task to near resturatnt and how many delivery driver they want in which time period</p>
                            </div>
                       </div>
